generated/SoleScriptParser.py
# Generated from SoleScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SoleScriptParser ( Parser ):

    grammarFileName = "SoleScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Foot'", "'Observations'", "'Last'", 
                     "'Boot'", "'Export'", "'Vamp'", "'Tongue'", "<INVALID>", 
                     "'ToeBox'", "'Outsole'", "'Heel'", "'Shank'", "'Insole'", 
                     "'Counter'", "'Lining'", "'Diabetic'", "'Egyptian'", 
                     "'Greek'", "'Roman'", "'Celtic'", "'Germanic'", "'Square'", 
                     "'Peasant'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "'['", "']'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "FOOT", "OBSERVATIONS", "LAST", "BOOT", 
                      "EXPORT", "VAMP", "TONGUE", "QUARTER", "TOEBOX", "OUTSOLE", 
                      "HEEL", "SHANK", "INSOLE", "COUNTER", "LINING", "DIABETIC", 
                      "EGYPTIAN", "GREEK", "ROMAN", "CELTIC", "GERMANIC", 
                      "SQUARE", "PEASANT", "UNIT", "NUMBER", "STRING", "ID", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COLON", 
                      "COMMA", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_foot_decl = 2
    RULE_obs_decl = 3
    RULE_last_decl = 4
    RULE_boot_decl = 5
    RULE_export_decl = 6
    RULE_attr_list = 7
    RULE_attr_entry = 8
    RULE_comp_list = 9
    RULE_comp_entry = 10
    RULE_shoe_comp = 11
    RULE_value = 12
    RULE_id = 13
    RULE_number = 14
    RULE_string_val = 15
    RULE_keyword_val = 16

    ruleNames =  [ "program", "statement", "foot_decl", "obs_decl", "last_decl", 
                   "boot_decl", "export_decl", "attr_list", "attr_entry", 
                   "comp_list", "comp_entry", "shoe_comp", "value", "id", 
                   "number", "string_val", "keyword_val" ]

    EOF = Token.EOF
    FOOT=1
    OBSERVATIONS=2
    LAST=3
    BOOT=4
    EXPORT=5
    VAMP=6
    TONGUE=7
    QUARTER=8
    TOEBOX=9
    OUTSOLE=10
    HEEL=11
    SHANK=12
    INSOLE=13
    COUNTER=14
    LINING=15
    DIABETIC=16
    EGYPTIAN=17
    GREEK=18
    ROMAN=19
    CELTIC=20
    GERMANIC=21
    SQUARE=22
    PEASANT=23
    UNIT=24
    NUMBER=25
    STRING=26
    ID=27
    LBRACE=28
    RBRACE=29
    LBRACKET=30
    RBRACKET=31
    COLON=32
    COMMA=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SoleScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SoleScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(SoleScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SoleScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(SoleScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def foot_decl(self):
            return self.getTypedRuleContext(SoleScriptParser.Foot_declContext,0)


        def obs_decl(self):
            return self.getTypedRuleContext(SoleScriptParser.Obs_declContext,0)


        def last_decl(self):
            return self.getTypedRuleContext(SoleScriptParser.Last_declContext,0)


        def boot_decl(self):
            return self.getTypedRuleContext(SoleScriptParser.Boot_declContext,0)


        def export_decl(self):
            return self.getTypedRuleContext(SoleScriptParser.Export_declContext,0)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SoleScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.foot_decl()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.obs_decl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.last_decl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.boot_decl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.export_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Foot_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOOT(self):
            return self.getToken(SoleScriptParser.FOOT, 0)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def LBRACE(self):
            return self.getToken(SoleScriptParser.LBRACE, 0)

        def attr_list(self):
            return self.getTypedRuleContext(SoleScriptParser.Attr_listContext,0)


        def RBRACE(self):
            return self.getToken(SoleScriptParser.RBRACE, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_foot_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoot_decl" ):
                listener.enterFoot_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoot_decl" ):
                listener.exitFoot_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFoot_decl" ):
                return visitor.visitFoot_decl(self)
            else:
                return visitor.visitChildren(self)




    def foot_decl(self):

        localctx = SoleScriptParser.Foot_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_foot_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SoleScriptParser.FOOT)
            self.state = 50
            self.id_()
            self.state = 51
            self.match(SoleScriptParser.LBRACE)
            self.state = 52
            self.attr_list()
            self.state = 53
            self.match(SoleScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Obs_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBSERVATIONS(self):
            return self.getToken(SoleScriptParser.OBSERVATIONS, 0)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def LBRACE(self):
            return self.getToken(SoleScriptParser.LBRACE, 0)

        def attr_list(self):
            return self.getTypedRuleContext(SoleScriptParser.Attr_listContext,0)


        def RBRACE(self):
            return self.getToken(SoleScriptParser.RBRACE, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_obs_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObs_decl" ):
                listener.enterObs_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObs_decl" ):
                listener.exitObs_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObs_decl" ):
                return visitor.visitObs_decl(self)
            else:
                return visitor.visitChildren(self)




    def obs_decl(self):

        localctx = SoleScriptParser.Obs_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_obs_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SoleScriptParser.OBSERVATIONS)
            self.state = 56
            self.id_()
            self.state = 57
            self.match(SoleScriptParser.LBRACE)
            self.state = 58
            self.attr_list()
            self.state = 59
            self.match(SoleScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Last_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAST(self):
            return self.getToken(SoleScriptParser.LAST, 0)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def LBRACE(self):
            return self.getToken(SoleScriptParser.LBRACE, 0)

        def attr_list(self):
            return self.getTypedRuleContext(SoleScriptParser.Attr_listContext,0)


        def RBRACE(self):
            return self.getToken(SoleScriptParser.RBRACE, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_last_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLast_decl" ):
                listener.enterLast_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLast_decl" ):
                listener.exitLast_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLast_decl" ):
                return visitor.visitLast_decl(self)
            else:
                return visitor.visitChildren(self)




    def last_decl(self):

        localctx = SoleScriptParser.Last_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_last_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SoleScriptParser.LAST)
            self.state = 62
            self.id_()
            self.state = 63
            self.match(SoleScriptParser.LBRACE)
            self.state = 64
            self.attr_list()
            self.state = 65
            self.match(SoleScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boot_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOT(self):
            return self.getToken(SoleScriptParser.BOOT, 0)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def LBRACE(self):
            return self.getToken(SoleScriptParser.LBRACE, 0)

        def attr_list(self):
            return self.getTypedRuleContext(SoleScriptParser.Attr_listContext,0)


        def comp_list(self):
            return self.getTypedRuleContext(SoleScriptParser.Comp_listContext,0)


        def RBRACE(self):
            return self.getToken(SoleScriptParser.RBRACE, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_boot_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoot_decl" ):
                listener.enterBoot_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoot_decl" ):
                listener.exitBoot_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoot_decl" ):
                return visitor.visitBoot_decl(self)
            else:
                return visitor.visitChildren(self)




    def boot_decl(self):

        localctx = SoleScriptParser.Boot_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_boot_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SoleScriptParser.BOOT)
            self.state = 68
            self.id_()
            self.state = 69
            self.match(SoleScriptParser.LBRACE)
            self.state = 70
            self.attr_list()
            self.state = 71
            self.comp_list()
            self.state = 72
            self.match(SoleScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Export_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPORT(self):
            return self.getToken(SoleScriptParser.EXPORT, 0)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_export_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExport_decl" ):
                listener.enterExport_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExport_decl" ):
                listener.exitExport_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExport_decl" ):
                return visitor.visitExport_decl(self)
            else:
                return visitor.visitChildren(self)




    def export_decl(self):

        localctx = SoleScriptParser.Export_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_export_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SoleScriptParser.EXPORT)
            self.state = 75
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SoleScriptParser.Attr_entryContext)
            else:
                return self.getTypedRuleContext(SoleScriptParser.Attr_entryContext,i)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_attr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_list" ):
                listener.enterAttr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_list" ):
                listener.exitAttr_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_list" ):
                return visitor.visitAttr_list(self)
            else:
                return visitor.visitChildren(self)




    def attr_list(self):

        localctx = SoleScriptParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 77
                self.attr_entry()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def COLON(self):
            return self.getToken(SoleScriptParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(SoleScriptParser.ValueContext,0)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_attr_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_entry" ):
                listener.enterAttr_entry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_entry" ):
                listener.exitAttr_entry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_entry" ):
                return visitor.visitAttr_entry(self)
            else:
                return visitor.visitChildren(self)




    def attr_entry(self):

        localctx = SoleScriptParser.Attr_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attr_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.id_()
            self.state = 84
            self.match(SoleScriptParser.COLON)
            self.state = 85
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comp_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comp_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SoleScriptParser.Comp_entryContext)
            else:
                return self.getTypedRuleContext(SoleScriptParser.Comp_entryContext,i)


        def getRuleIndex(self):
            return SoleScriptParser.RULE_comp_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_list" ):
                listener.enterComp_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_list" ):
                listener.exitComp_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp_list" ):
                return visitor.visitComp_list(self)
            else:
                return visitor.visitChildren(self)




    def comp_list(self):

        localctx = SoleScriptParser.Comp_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comp_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65472) != 0):
                self.state = 87
                self.comp_entry()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comp_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shoe_comp(self):
            return self.getTypedRuleContext(SoleScriptParser.Shoe_compContext,0)


        def LBRACE(self):
            return self.getToken(SoleScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SoleScriptParser.RBRACE, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_comp_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_entry" ):
                listener.enterComp_entry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_entry" ):
                listener.exitComp_entry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp_entry" ):
                return visitor.visitComp_entry(self)
            else:
                return visitor.visitChildren(self)




    def comp_entry(self):

        localctx = SoleScriptParser.Comp_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comp_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.shoe_comp()
            self.state = 94
            self.match(SoleScriptParser.LBRACE)
            self.state = 95
            self.match(SoleScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shoe_compContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAMP(self):
            return self.getToken(SoleScriptParser.VAMP, 0)

        def TONGUE(self):
            return self.getToken(SoleScriptParser.TONGUE, 0)

        def QUARTER(self):
            return self.getToken(SoleScriptParser.QUARTER, 0)

        def TOEBOX(self):
            return self.getToken(SoleScriptParser.TOEBOX, 0)

        def OUTSOLE(self):
            return self.getToken(SoleScriptParser.OUTSOLE, 0)

        def HEEL(self):
            return self.getToken(SoleScriptParser.HEEL, 0)

        def SHANK(self):
            return self.getToken(SoleScriptParser.SHANK, 0)

        def INSOLE(self):
            return self.getToken(SoleScriptParser.INSOLE, 0)

        def COUNTER(self):
            return self.getToken(SoleScriptParser.COUNTER, 0)

        def LINING(self):
            return self.getToken(SoleScriptParser.LINING, 0)

        def getRuleIndex(self):
            return SoleScriptParser.RULE_shoe_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShoe_comp" ):
                listener.enterShoe_comp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShoe_comp" ):
                listener.exitShoe_comp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShoe_comp" ):
                return visitor.visitShoe_comp(self)
            else:
                return visitor.visitChildren(self)




    def shoe_comp(self):

        localctx = SoleScriptParser.Shoe_compContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_shoe_comp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 65472) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SoleScriptParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DimensionValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SoleScriptParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(SoleScriptParser.NumberContext,0)

        def UNIT(self):
            return self.getToken(SoleScriptParser.UNIT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensionValue" ):
                listener.enterDimensionValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensionValue" ):
                listener.exitDimensionValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensionValue" ):
                return visitor.visitDimensionValue(self)
            else:
                return visitor.visitChildren(self)


    class StringListValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SoleScriptParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACKET(self):
            return self.getToken(SoleScriptParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(SoleScriptParser.RBRACKET, 0)
        def string_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SoleScriptParser.String_valContext)
            else:
                return self.getTypedRuleContext(SoleScriptParser.String_valContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringListValue" ):
                listener.enterStringListValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringListValue" ):
                listener.exitStringListValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringListValue" ):
                return visitor.visitStringListValue(self)
            else:
                return visitor.visitChildren(self)


    class IdValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SoleScriptParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(SoleScriptParser.IdContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdValue" ):
                listener.enterIdValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdValue" ):
                listener.exitIdValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdValue" ):
                return visitor.visitIdValue(self)
            else:
                return visitor.visitChildren(self)


    class KeywordValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SoleScriptParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def keyword_val(self):
            return self.getTypedRuleContext(SoleScriptParser.Keyword_valContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeywordValue" ):
                listener.enterKeywordValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeywordValue" ):
                listener.exitKeywordValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeywordValue" ):
                return visitor.visitKeywordValue(self)
            else:
                return visitor.visitChildren(self)



    def value(self):
